force-app/main/default/objects/HFS_Relation_Collection_Storage__c/HFS_Relation_Collection_Storage__c.object-meta.xml
<CustomObject>
    <description>This is an junction object that will save the relations between the Collection points and the Storage points.</description>
    <label>HFS Relation Collection-Storage</label>
    <nameField>
        <label>Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HFS Relations Collection-Storage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>