force-app/main/default/objects/HFS_Relation_Collection_Storage__c/fields/HFS_Storage_Point__c.field-meta.xml
<CustomField>
    <fullName>HFS_Storage_Point__c</fullName>
    <description>All Storage Point existent on each Village</description>
    <label>HFS Storage Point</label>
    <referenceTo>HFS_Storage_Point__c</referenceTo>
    <relationshipLabel>HFS Relations Collection-Storage</relationshipLabel>
    <relationshipName>Relations_Collection_Storage</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>