force-app/main/default/objects/HFS_Relation_Collection_Storage__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <description>Save the correspondent village of the relation.</description>
    <label>Village</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Village</valueSetName>
    </valueSet>
</CustomField>