force-app/main/default/objects/HFS_Relation_Collection_Storage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HFS_Collection_Point__c</columns>
    <columns>HFS_Storage_Point__c</columns>
    <columns>Village__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>